--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "clsx": "^2.1.0",
     "framer-motion": "^11.1.1",
     "mini-svg-data-uri": "^1.4.4",
